# next
- Adds start playing a song when double-clicked in the Queue
- Removes checkbox indicator in Queue in favor of proper row highlighting
- Reducing need to redraw the Queue after manipulating it
- Improve follow mode reliability with duplicate songs
- Reduces memory usage
- Minor UI tweaks
- Code refactoring

# 5.1
- Adds inserting songs after the currently playing queue item
- Adds selecting a song by clicking on its text-area
- Adds opening song's context menu by right-clicking on its text-area
- Adds dedicated button to open a song's context menu in some places
- Fixes showing error message if mpc is not installed
- Fixes cover cache not rotating properly
- Minor UI tweaks

# 5.0
- Was burned along with the rest of the ship to make it back to London in time
- The package "imagemagick" is required additionally to "mpc" now

# 4.5
- Fixes release on store.kde.org

# 4.4
- Fixes play button in queue not switching from play to pause when queue ends
- Fixes "consume" icon missing (using breeze theme icon now).

# 4.3
- Fixes Play button of current song in queue restarts song instead of resuming
- Fixes keyboard shortcuts not working for "random" and "consume"
- Fixes selected songs not reliably removed from queue
- Replaces "random" and "consume" labels with shortcuts in narrow view

# 4.2
- Play icon for current song in queue shows playing status and toggles play/pause
- Fixes "undefined" output in the queue album information
- Fixes widget sometimes being stuck on no song playing after queue change
- Fixes the cover glitching through no-cover during queue change
- Performance improvements(tm)

# 4.1
- Adds simplified queue layout at narrow window size
- Redesigns destructive actions confirmation dialogs
- Splits saving the queue into two separate dialogs
- Fixes overflowing text in queue
- Reduces RAM usage

# 4.0
- Adds removing a playlist
- Adds saving the queue as playlist
- Adds reordering from items in the queue
- Adds emptying the queue