@@ -15,23 +15,9 @@ Item {
         id: menu
 
         Kirigami.Action {
-
-            property string itDesc: qsTr("Queue")
-            property string itSc: "1"
-
             iconName: "draw-arrow-back"
-            text: itDesc
-            tooltip: itDesc + " (" + itSc + ")"
-            shortcut: itSc
-            checkable: true
-            checked: queuePage.visible
-            onTriggered: {
-                if (!queuePage.visible) {
-                    while (appWindow.pageStack.depth > 0)
-                        appWindow.pageStack.pop()
-                    appWindow.pageStack.push(queuePage)
-                }
-            }
+            text: qsTr("Queue")
+            onTriggered: appWindow.showPage(queuePage)
         }
     }
 }
